add main and direction sections

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>iQ</title>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Yanone+Kaffeesatz:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -34,7 +35,8 @@
 		</div>
 	</header> -->
 	<section class="main">
-		<img src="./images/%E2%80%94Pngtree%E2%80%94mobile%20mobile%20it%20flat%20wind_4632327.png" alt="sss">
+		<!-- <div class="main__image"></div> -->
+		<!-- <img class="main__image" src="./images/%E2%80%94Pngtree%E2%80%94mobile%20mobile%20it%20flat%20wind_4632327.png" alt="sss"> -->
 		<div class="container">
 			<div class="main__content">
 				<h1 class="main__title"> Веб студия IQ </h1>
@@ -43,5 +45,22 @@
 			</div>
 		</div>
 	</section>
+	<section class="direction">
+		<div class="container">
+			<div class="direction__content">
+				<h3>ЧТО МЫ ДЕЛАЕМ</h3>
+				<h2>Проекты любой сложности</h2>
+				<p>Мы создаем продукт максимально соответствующий вашим желаниям. Вы получите продукт готовый к использованию с первой минуты.</p>
+				<div class="direction__box">
+					<h4 id="percent">0</h4>
+					<progress class="percent__progress" id="progress" value="0" max="100"></progress>
+					<progress class="percent__progress" id="progress2" value="0" max="100"></progress>
+					<progress class="percent__progress" id="progress3" value="0" max="100"></progress>
+					<progress class="percent__progress" id="progress4" value="0" max="100"></progress>
+				</div>
+			</div>
+		</div>
+	</section>
+	<script src="./script/script.js"></script>
 </body>
 </html>
