--- a/index.html
+++ b/index.html
@@ -127,7 +127,79 @@
 			<div class="projects__slide owl-carousel owl-theme">
 				<div class="projects__item">
 					<a href="">
-						<!-- <img class=".projects__image" src="./images/mountain.jpg" alt=""> -->
+						<img class=".projects__image" src="./images/тоголок.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект2.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект3.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект4.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект5.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект6.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект7.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект8.jpeg" alt="">
+						<div class="projects__desc">
+							<h4>SSS</h4>
+							<p>sss</p>
+						</div>
+					</a>
+				</div>
+				<div class="projects__item">
+					<a href="">
+						<img class=".projects__image" src="./images/проект9.jpeg" alt="">
 						<div class="projects__desc">
 							<h4>SSS</h4>
 							<p>sss</p>
