--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./style/owl.carousel.min.css">
 	<link rel="stylesheet" href="./style/owl.theme.default.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -34,29 +35,29 @@
 	<div class="progress "></div>
 	<section class="main container">
 			<div class="main__content">
-				<h1 class="main__title"> Веб студия iQ </h1>
-				<p class="main__text">Специализируемся на разработке сайтов</br> в Кыргызстане и во всех странах СНГ</p>
+				<h1 class="main__title _anim-items _anim-no-hide"> Веб студия <span>iQ</span> </h1>
+				<p class="main__text _anim-items _anim-no-hide">Специализируемся на разработке сайтов</br> в Кыргызстане и во всех странах СНГ</p>
 				<a href="#direction" class="main__btn">Узнать Больше</a>
 			</div>
 			<img src="./images/mobile.png" alt="">
 	</section>
 	<section class="direction container" id="direction">
-			<h3 class="title">Наша команда</h3>
-			<h2 class="heading">Разрабатывает</h2>
-			<div class="direction__content">
-				<div class="direction__box">
+		<h3 class="title">Наша команда</h3>
+		<h2 class="heading">Разрабатывает</h2>
+		<div class="direction__content">
+			<div class="direction__box">
 				<h3 class="title">ЧТО МЫ ДЕЛАЕМ</h3>
 				<h2 class="heading">Проекты любой сложности</h2>
 				<p class="text">Мы создаем продукт максимально соответствующий вашим желаниям. Вы получите продукт готовый к использованию с первой минуты.</p>
 				<div class="direction__holder">
 					<h4 id="percent">Веб дизайн</h4>
-					<progress class="percent__progress" id="progress" value="0" max="100"></progress>
+					<progress class="percent__progress _anim-items _anim-no-hide" id="progress" value="0" max="100"></progress>
 					<h4 id="percent">Мобильные приложения</h4>
-					<progress class="percent__progress" id="progress2" value="0" max="100"></progress>
+					<progress class="percent__progress _anim-items _anim-no-hide" id="progress2" value="0" max="100"></progress>
 					<h4 id="percent">Автоматизация систем</h4>
-					<progress class="percent__progress" id="progress3" value="0" max="100"></progress>
+					<progress class="percent__progress _anim-items _anim-no-hide" id="progress3" value="0" max="100"></progress>
 					<h4 id="percent">Разработка сайтов</h4>
-					<progress class="percent__progress" id="progress4" value="0" max="100"></progress>
+					<progress class="percent__progress _anim-items _anim-no-hide" id="progress4" value="0" max="100"></progress>
 				</div>
 			</div>
 			<img src="./images/process.png" alt="">
@@ -69,7 +70,7 @@
 			<h3 class="title">О НАС</h3>
 			<h2 class="heading">Наши Особенности</h2>
 			<p class="text">Деньги все таки пахнут, поэтому нам важно делать нашу работу максимально качественно</p>
-			<div class="about__box">
+			<div class="about__box _anim-items _anim-no-hide">
 				<div class="about__item content">
 					<div class="about__icon">
 						<img src="./images/layer.svg" alt="">
@@ -127,10 +128,10 @@
 			</div>
 		</div>
 	</section>
-	<section class="projects">
+	<!-- <section class="projects">
 		<div class="container">
 			<h2 class="heading">Наши проекты</h2>
-			<div class="projects__slide owl-carousel owl-theme">
+			<div class="projects__slide owl-carousel owl-theme _anim-items _anim-no-hide">
 				<div class="projects__item">
 					<a href="">
 						<img class="projects__image" src="./images/тоголок.jpeg" alt="">
@@ -214,14 +215,14 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<section class="process">
 		<div class="container">
 			<h3 class="title">ПРОЦЕСС</h3>
 			<h2 class="heading">Как это Работает?</h2>
 			<p class="text">В двух словах о том, как мы с вами будем работать</p>
 			<div class="process__items">
-				<img src="./images/kisspng-vector-graphics-illustration-royalty-free-design-s-updo-clip-business-transparent-amp-png-clipart-f-5cc908f0b5b147.7285084515566788967442.png" alt="">
+				<img src="./images/analiz.png" alt="">
 				<div class="process__box">
 					<div class="process__item content">
 						<div class="process__icon">
@@ -264,9 +265,8 @@
 					<input type="tel" pattern="[0-9]{6,14}" placeholder="Телефон">
 					<button class="btn">Отправить</button>
 				</div>
-				<img src="./images/ia_callbackmanager_img2.png" alt="">
+				<img src="./images/contact-center.png" alt="">
 			</form>
-
 		</div>
 	</section>
 	<footer class="footer">
